[workspace]
resolver = "2"
members = [
  "libnyx",
  "libnyx_config",
  "libnyx_fuzz_runner",
  "acat",
]
default_members = [
  "libnyx",
  "libnyx_config",
  "libnyx_fuzz_runner",
  "acat",
]

[workspace.package]
version = "0.1.0"
license = "GPL-2.0-only"
edition = "2021"
description = "libnyx fork only for publishing"
homepage = "https://github.com/wtdcode/libnyx"
repository = "https://github.com/wtdcode/libnyx"
readme = "README.md"