[workspace]
resolver = "2"
members = [
  "libnyx",
  "libnyx_config",
  "libnyx_fuzz_runner",
  "acat",
]
default_members = [
  "libnyx",
  "libnyx_config",
  "libnyx_fuzz_runner",
  "acat",
]

[workspace.package]
version = "0.1.0"
license = "GPL-2.0-only"
edition = "2021"
description = "libnyx fork only for publishing"
homepage = "https://github.com/wtdcode/libnyx"
repository = "https://github.com/nyx-fuzz/libnyx"
readme = "README.md"

[workspace.dependencies]
libnyx_fuzz_runner = {version = "0.1.0", path = "libnyx_fuzz_runner"}
libnyx = {version = "0.1.0", path = "libnyx"}
libnyx_config = {version = "0.1.0", path = "libnyx_config"}