[package]
name = "acat"
version = "0.1.0"
authors = ["Sergej Schumilo <sergej@schumilo.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libnyx_fuzz_runner={path="../libnyx_fuzz_runner"}
colored = "2.0.0"
clap="2.33.0"
