[package]
name = "libnyx"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
name = "libnyx"
crate-type = ["lib", "staticlib", "dylib"]

[build-dependencies]
cbindgen = "0.28.0"

[dependencies]
libnyx_config.workspace = true
libnyx_fuzz_runner.workspace = true
libc = "0.2"
