[package]
name = "libnyx_acat"
authors = ["Sergej Schumilo <sergej@schumilo.de>"]
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libnyx_fuzz_runner.workspace = true
colored = "2.0.0"
clap="2.33.0"
