[package]
name = "libnyx_config"
authors = ["coco <cornelius@hexgolems.com>"]
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde ="1.0.104"
serde_derive ="1.0.104"
ron="0.6.2"
libc = "0.2"